user-signup: Completed

--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -16,7 +16,7 @@
         <header class="jumbotron my-4">
             <h1 class="display-3">Welcome to New Game Plus!</h1>
             <p class="lead">The latest video game reviews for gamers by gamers.</p>
-            <a href="#" class="btn btn-primary btn-lg">Sign up</a>
+            <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
         </header>
 
         <!-- Page Features -->
