--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <% include ./partials/header.ejs %>
+    <% include ./partials/head.ejs %>
 </head>
 
 <body>
@@ -11,6 +11,8 @@
     <% include ./partials/navbar.ejs %>
 
     <main class="container">
+
+        <% include ./partials/messages.ejs %>
 
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
@@ -45,7 +47,7 @@
 
 
 
-    <% include ./partials/footer.ejs %>
+    <% include ./partials/baseScripts.ejs %>
 </body>
 
 </html>
