--- a/src/views/users/sign_in.ejs
+++ b/src/views/users/sign_in.ejs
@@ -13,33 +13,28 @@
 
         <% include ../static/partials/messages.ejs %>
 
-        <h1>Sign up</h1>
+        <h1>Sign in</h1>
 
-        <form action="/users" method="post">
+        <form action="/users/sign_in" method="post">
+
             <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control" name="username" placeholder="Enter Username">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" name="username" aria-describedby="usernameHelp" placeholder="Enter username">
             </div>
 
             <div class="form-group">
-                <label for="email">Email:</label>
+                <label for="email">Email</label>
                 <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
                 <small class="text-muted" id="emailHelp">email address must be a valid address</small>
             </div>
 
             <div class="form-group">
-                <label for="password">Password:</label>
+                <label for="password">Password</label>
                 <input type="password" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
                 <small class="text-muted" id="passwordHelp">password must match confirmation below</small>
             </div>
 
-            <div class="form-group">
-                <label for="passwordConfirmation">Password confirmation:</label>
-                <input type="password" class="form-control" name="passwordConfirmation" aria-describedby="passwordHelp"
-                    placeholder="Enter password confirmation">
-            </div>
-
-            <button type="submit" class="btn btn-primary">Sign up</button>
+            <button type="submit" class="btn btn-primary">Sign in</button>
         </form>
     </main>
 
