video-game-CRUD: Completed

--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -14,33 +14,12 @@
 
         <% include ./partials/messages.ejs %>
 
-        <!-- Jumbotron Header -->
+        <!-- Landing Page needs work -->
         <header class="jumbotron my-4">
             <h1 class="display-3">Welcome to New Game Plus!</h1>
             <p class="lead">The latest video game reviews for gamers by gamers.</p>
-            <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
+            <a href="/games" class="btn btn-primary btn-lg">Take me to the games!</a>
         </header>
-
-        <!-- Page Features -->
-        <section class="row text-center">
-
-            <section class="col-lg-4">
-                <h4 class="card-title">Game 1</h4>
-                <p class="card-text">Information about the game.</p>
-            </section>
-
-            <section class="col-lg-4">
-                <h4 class="card-title">Game 2</h4>
-                <p class="card-text">Information about the game.</p>
-            </section>
-
-            <section class="col-lg-4">
-                <h4 class="card-title">Game 3</h4>
-                <p class="card-text">Information about the game.</p>
-            </section>
-
-        </section>
-        <!-- /.row -->
 
     </main>
     <!-- /.container -->
