--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -1,3 +1,17 @@
 body {
   padding-top: 64px;
 }
+.thumbnail img {
+  width: 100%;
+}
+.thumbnail {
+  padding: 0;
+}
+.thumbnail .caption-full {
+  padding: 9px;
+}
+
+.trending {
+  padding-bottom: 15px;
+  font-style: italic;
+}
