review-and-rating-CRUD: Completed

--- a/src/views/games/index.ejs
+++ b/src/views/games/index.ejs
@@ -15,7 +15,7 @@
                 <h1>Welcome to New Game Plus!</h1>
                 <p>View our trusted video game reviews on the latest and greatest games.</p>
                 <p>
-                    <a class="btn btn-primary btn-lg" href="/games/new">Add New Game Review</a>
+                    <a class="btn btn-primary btn-lg" href="/games/new">Add New Game Recommendation</a>
                 </p>
             </div>
         </header>
