--- a/src/views/reviews/new.ejs
+++ b/src/views/reviews/new.ejs
@@ -13,7 +13,7 @@
         <form action="/games/<%= gameId %>/reviews/create" method="post">
             <div class=" form-group">
                 <label for="rating">Review rating</label>
-                <input type="number" class="form-control" name="rating" min="1" max="5" placeholder=5>
+                <input type="number" class="form-control" name="rating" min="1" max="5">
                 <small class="text-muted" id="ratingHelp">Rating must be whole numbers on 1-5 scale</small>
             </div>
 
