--- a/src/views/reviews/edit.ejs
+++ b/src/views/reviews/edit.ejs
@@ -9,6 +9,10 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
+
+        <% include ../static/partials/messages.ejs %>
+
+
         <h1>Edit Review</h1>
         <form action="/games/<%= review.gameId %>/reviews/<%= review.id %>/update" method="post">
             <div class="form-group">
