--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -15,3 +15,11 @@ body {
   padding-bottom: 15px;
   font-style: italic;
 }
+
+.checked {
+  color: orange;
+}
+
+#navbar-right-side {
+  padding-right: 15px;
+}
