--- a/src/views/games/show.ejs
+++ b/src/views/games/show.ejs
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-    <% include ../static/partials/messages.ejs %>
     <% include ../static/partials/navbar.ejs %>
-
+    <% include ../static/partials/functions.ejs %>
     <main class="container">
+        <% include ../static/partials/messages.ejs %>
         <div class="col-md-9">
             <div class="thumbnail">
                 <img class="img-responsive" src="<%= game.image %>">
@@ -19,25 +19,91 @@
                     <p>
                         <%= game.description %>
                     </p>
+                    <p><em> Submitted by:
+                            <%= game.User.username %>
+                        </em></p>
+                    <% if(currentUser) { %>
+                    <% if
+                    (currentUser.id === game.userId) { %>
+                    <a href="/games/<%=game.id %>/edit" class="btn btn-warning">Edit</a>
+                    <form style="display:initial" action="/games/<%=game.id %>/destroy" method="post">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                    <% } %>
+                    <% } %>
+                    <div style="margin-top: 10px;">
+                        <a class="btn btn-default" href="/games"><i class="fa fa-arrow-left"></i> Go back</a>
+                    </div>
                 </div>
             </div>
-            <% if(currentUser && currentUser.id === game.userId) { %>
-            <a href="/games/<%= game.id %>/edit" class="btn btn-warning">Edit</a>
-            <form style="display:initial" action="/games/<%= game.id %>/destroy" method="post">
-                <button type="submit" class="btn btn-danger">Delete</button>
-            </form>
-            <% } %>
             <hr>
+            <!--Review section-->
+            <div class="thumbnail">
+                <div class="caption-full">
+                    <% if ((calculateAverage(game.reviews)) == 0) { %>
+                    <h5>
+                        <em>No reviews yet.</em>
+                    </h5>
+                    <% } else { %>
+                    <p>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star <% if ((calculateAverage(game.reviews)) > 1.5) { %> checked <% } %>"></span>
+                        <span class="fa fa-star <% if ((calculateAverage(game.reviews)) > 2.5) { %> checked <% } %>"></span>
+                        <span class="fa fa-star <% if ((calculateAverage(game.reviews)) > 3.5) { %> checked <% } %>"></span>
+                        <span class="fa fa-star <% if ((calculateAverage(game.reviews)) > 4.5) { %> checked <% } %>"></span>
+                        <% } %>
+                        <em>(total reviews:
+                            <%= game.reviews.length %>)</em>
+                    </p>
+                    <% if ((calculateAverage(game.reviews)) != 0) { %>
+                    <p>
+                        Current game rating: <strong>
+                            <%= calculateAverage(game.reviews); %></strong>
+                    </p>
+                    <p>
+                        <h4>Latest reviews for this game:</h4>
+                    </p>
+                    <hr style="margin-top: 0;">
+                    <% game.reviews.slice(0, 5).forEach(function(review){ %>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <%- '<span class="fa fa-star checked"></span>'.repeat(review.rating) %>
+                            <%- '<span class="fa fa-star"></span>'.repeat(5 - review.rating) %>
+                            <div>Review by: <strong>
+                                    <%= review.User.username %></strong></div>
+                            <span><em>
+                                    <%= review.updatedAt.toDateString() %></em></span>
+                        </div>
+                        <div class="col-md-9">
+                            <p style="text-align: justify; word-wrap: break-word;">
+                                <%= review.body %>
+                            </p>
+                            <% if(currentUser) { %>
+                            <% if(review.userId === currentUser.id){ %>
+                            <a class="btn btn-xs btn-warning" href="/games/<%=review.gameId %>/reviews/<%=review.id %>/edit">Edit</a>
+                            <form id="delete-form" action="/games/<%=review.gameId %>/reviews/<%=review.id %>/destroy"
+                                method="POST">
+                                <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+                            </form>
+                            <% } %>
+                            <% } %>
+                        </div>
+                    </div>
+                    <hr>
+                    <% }); %>
 
-            <section id="review-list">
-                <% if(game.reviews) { %>
-                <% game.reviews.forEach((review) => { %>
-                <%- include("../reviews/show.ejs", {review}) %>
-                <% }) %>
-                <% } %>
-            </section>
-            <div>
-                <a class="btn btn-primary btn-lg" href="/games/<%= game.id %>/reviews/new">Write a New Review</a>
+
+                    <div style="margin-bottom: 10px;">
+                        <h4><a href="/games/<%=game.id %>/reviews"><i class="fa fa-search" aria-hidden="true"></i>
+                                See all reviews</a></h4>
+                        <% } %>
+                    </div>
+                    <div>
+                        <a class="btn btn-primary btn-lg <% if (currentUser) { %> <% if (currentUser.id === game.reviews.userId) { %> disabled <% } %> <% } %>"
+                            href="/games/<%=game.id %>/reviews/new">
+                            Write your Review</a>
+                    </div>
+                </div>
             </div>
 
     </main>
