--- a/src/views/reviews/edit.ejs
+++ b/src/views/reviews/edit.ejs
@@ -7,26 +7,73 @@
 
 <body>
     <% include ../static/partials/navbar.ejs %>
-
     <main class="container">
-
         <% include ../static/partials/messages.ejs %>
-
-
-        <h1>Edit Review</h1>
-        <form action="/games/<%= review.gameId %>/reviews/<%= review.id %>/update" method="post">
-            <div class="form-group">
-                <label for="rating">Review rating</label>
-                <input value="<%= review.rating %>" type="number" class="form-control" name="rating" min="1" max="5">
+        <div class="container">
+            <div class="row">
+                <h1 style="text-align: center">Edit Review for:
+                    <%= review.Game.title %>
+                </h1>
+                <div style="width: 30%; margin: 25px auto;">
+                    <form action="/games/<%=review.gameId %>/reviews/<%=review.id %>/update" method="POST">
+                        <div class="form-group">
+                            <label for="rating">Leave a rating:</label>
+                            <fieldset class="starability-basic form-group" id="rating">
+                                <div>
+                                    <input type="radio" id="first-rate5" name="rating" value="5" <% if (review.rating===5)
+                                        { %> checked
+                                    <% } %> />
+                                    <label for="first-rate5" title="5 stars - Amazing">
+                                        <%- '<span class="fa fa-star checked"></span>'.repeat(5) %>
+                                    </label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="first-rate4" name="rating" value="4" <% if (review.rating===4)
+                                        { %> checked
+                                    <% } %> />
+                                    <label for="first-rate4" title="4 stars - Very good">
+                                        <%- '<span class="fa fa-star checked"></span>'.repeat(4) %>
+                                    </label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="first-rate3" name="rating" value="3" <% if (review.rating===3)
+                                        { %> checked
+                                    <% } %> />
+                                    <label for="first-rate3" title="3 stars - Average">
+                                        <%- '<span class="fa fa-star checked"></span>'.repeat(3) %>
+                                    </label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="first-rate2" name="rating" value="2" <% if (review.rating===2)
+                                        { %> checked
+                                    <% } %> />
+                                    <label for="first-rate2" title="2 stars - Not good">
+                                        <%- '<span class="fa fa-star checked"></span>'.repeat(2) %>
+                                    </label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="first-rate1" name="rating" value="1" <% if (review.rating===1)
+                                        { %> checked
+                                    <% } %> />
+                                    <label for="first-rate1" title="1 star - Terrible">
+                                        <%- '<span class="fa fa-star checked"></span>'.repeat(1) %>
+                                    </label>
+                                </div>
+                            </fieldset>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" type="text" name="body" placeholder="Write a review for this game..."
+                                rows="5"><%= review.body %></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-primary btn-block">Update Review</button>
+                        </div>
+                    </form>
+                    <a href="/games/<%=review.gameId %>">Go Back</a>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="body">Review body</label>
-                <textarea rows="4" class="form-control" name="body" placeholder="Enter Review body"><%= review.body %></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Update</button>
-        </form>
+        </div>
     </main>
-
     <% include ../static/partials/baseScripts.ejs %>
 
 </body>
