--- a/src/views/reviews/new.ejs
+++ b/src/views/reviews/new.ejs
@@ -7,22 +7,61 @@
 
 <body>
     <% include ../static/partials/navbar.ejs %>
-
     <main class="container">
-        <h1>New Review</h1>
-        <form action="/games/<%= gameId %>/reviews/create" method="post">
-            <div class=" form-group">
-                <label for="rating">Review rating</label>
-                <input type="number" class="form-control" name="rating" min="1" max="5">
-                <small class="text-muted" id="ratingHelp">Rating must be whole numbers on 1-5 scale</small>
-            </div>
+        <% include ../static/partials/messages.ejs %>
+        <div class="row">
+            <h1 style="text-align: center">New Review for:
+                <%= game.title %>
+            </h1>
 
-            <div class="form-group">
-                <label for="body">Review body</label>
-                <textarea rows="4" class="form-control" name="body" placeholder="Enter Review body"></textarea>
+            <div style="width: 30%; margin: 25px auto;">
+                <form action="/games/<%=game.id %>/reviews/create" method="POST">
+                    <div class="form-group">
+                        <label for="rating">Leave a rating:</label>
+                        <fieldset class="starability-basic form-group" id="rating">
+                            <div>
+                                <input type="radio" id="first-rate5" name="rating" value="5" checked />
+                                <label for="first-rate5" title="5 stars - Amazing">
+                                    <%- '<span class="fa fa-star checked"></span>'.repeat(5) %>
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" id="first-rate4" name="rating" value="4" />
+                                <label for="first-rate4" title="4 stars - Very good">
+                                    <%- '<span class="fa fa-star checked"></span>'.repeat(4) %>
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" id="first-rate3" name="rating" value="3" />
+                                <label for="first-rate3" title="3 stars - Average">
+                                    <%- '<span class="fa fa-star checked"></span>'.repeat(3) %>
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" id="first-rate2" name="rating" value="2" />
+                                <label for="first-rate2" title="2 stars - Not good">
+                                    <%- '<span class="fa fa-star checked"></span>'.repeat(2) %>
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" id="first-rate1" name="rating" value="1" />
+                                <label for="first-rate1" title="1 star - Terrible">
+                                    <%- '<span class="fa fa-star checked"></span>'.repeat(1) %>
+                                </label>
+                            </div>
+                        </fieldset>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" type="text" name="body" placeholder="Write a review for this game..."
+                            rows="5"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary btn-block">Submit a Review</button>
+                    </div>
+                </form>
+                <a href="/games/<%= game.id %>">Go Back</a>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        </div>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
