--- a/src/views/static/partials/messages.ejs
+++ b/src/views/static/partials/messages.ejs
@@ -1,24 +1,16 @@
-<% if(messages.error || messages.notice) { %>
-
-<div class="alert alert-<%= messages.error ? 'danger' : 'warning' %> alert-dismissible fade show" role="alert">
-
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-
-    <% if(messages.error) { %>
-    Validation errors:
-    <ul>
-        <% messages.error.forEach((err) => { %>
-        <li>
-            <%= `${err.param} ${err.msg}` %>
-        </li>
-        <% }) %>
-    </ul>
-    <% } else { %>
-    <p>
-        <%= messages.notice %>
-    </p>
+<div class="container">
+    <% if(error && error.length > 0) { %>
+    <div class="alert alert-danger" role="alert">
+        <h1>
+            <%= error %>
+        </h1>
+    </div>
+    <% } %>
+    <% if(success && success.length > 0) { %>
+    <div class="alert alert-success" role="alert">
+        <h1>
+            <%= success %>
+        </h1>
+    </div>
     <% } %>
 </div>
-<% } %>
