--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,29 +1,30 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-default">
     <div class="container">
-        <a class="navbar-brand" href="/">New Game Plus</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <% if(currentUser) { %>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/sign_out">Sign out</a>
-                </li>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="/">New Game Plus</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="<%= typeof page !== 'undefined' && page === 'games' ? 'active' : '' %>"><a href="/games">Home</a></li>
+            </ul>
+            <ul id="navbar-right-side" class="nav navbar-nav navbar-right">
+                <% if(!currentUser){ %>
+                <li class="<%= typeof page !== 'undefined' && page === 'sign_in' ? 'active' : '' %>"><a href="/users/sign_in">Login</a></li>
+                <li class="<%= typeof page !== 'undefined' && page === 'sign_up' ? 'active' : '' %>"><a href="/users/sign_up">Sign
+                        Up</a></li>
                 <% } else { %>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/sign_up">Sign up</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/sign_in">Sign in</a>
-                </li>
-                <% }%>
+                <li><a href="#">Signed In As
+                        <%= currentUser.username %></a></li>
+                <li><a href="/users/sign_out">Logout</a></li>
+                <% } %>
             </ul>
         </div>
     </div>
