--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -2,28 +2,32 @@
 <html lang="en">
 
 <head>
-    <% include ./partials/head.ejs %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/landing.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
 </head>
 
 <body>
-
-    <!-- Navigation -->
-    <% include ./partials/navbar.ejs %>
     <main class="container">
         <% include ./partials/messages.ejs %>
-        <!-- Landing Page needs work -->
-        <header class="jumbotron my-4">
-            <h1 class="display-3">Welcome to New Game Plus!</h1>
+
+        <header id="landing-header">
+            <h1>Welcome to New Game Plus!</h1>
             <p class="lead">The latest video game reviews for gamers by gamers.</p>
-            <a href="/games" class="btn btn-primary btn-lg">Take me to the games!</a>
+            <a href="/games" class="btn btn-lg btn-danger">Take me to the games!</a>
         </header>
 
     </main>
-    <!-- /.container -->
 
 
+    <ul class="slideshow">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 
-    <% include ./partials/baseScripts.ejs %>
 </body>
 
 </html>
