--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -13,34 +13,37 @@
 
         <% include ../static/partials/messages.ejs %>
 
-        <h1>Sign up</h1>
+        <h1 style="text-align: center">Sign Up</h1>
+        <div style="width: 30%; margin: 25px auto;">
+            <form action="/users" method="post">
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control" name="username" placeholder="Enter Username">
+                </div>
 
-        <form action="/users" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control" name="username" placeholder="Enter Username">
-            </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small class="text-muted" id="emailHelp">email address must be a valid address</small>
+                </div>
 
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
-                <small class="text-muted" id="emailHelp">email address must be a valid address</small>
-            </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" name="password" aria-describedby="passwordHelp"
+                        placeholder="Enter password">
+                    <small class="text-muted" id="passwordHelp">password must match confirmation below</small>
+                </div>
 
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
-                <small class="text-muted" id="passwordHelp">password must match confirmation below</small>
-            </div>
+                <div class="form-group">
+                    <label for="passwordConfirmation">Password confirmation:</label>
+                    <input type="password" class="form-control" name="passwordConfirmation" aria-describedby="passwordHelp"
+                        placeholder="Enter password confirmation">
+                </div>
 
-            <div class="form-group">
-                <label for="passwordConfirmation">Password confirmation:</label>
-                <input type="password" class="form-control" name="passwordConfirmation" aria-describedby="passwordHelp"
-                    placeholder="Enter password confirmation">
-            </div>
-
-            <button type="submit" class="btn btn-primary">Sign up</button>
-        </form>
+                <button type="submit" class="btn btn-primary btn-block">Sign up</button>
+            </form>
+            <a href="/games">Go Back</a>
+        </div>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
