--- a/src/views/games/new.ejs
+++ b/src/views/games/new.ejs
@@ -9,24 +9,25 @@
     <% include ../static/partials/navbar.ejs %>
     <main class="container">
         <% include ../static/partials/messages.ejs %>
-        <h1>New Game</h1>
-
-        <form action="/games/create" method="post">
-            <div class="form-group">
-                <label for="title">Game Title:</label>
-                <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter game title">
-            </div>
-            <div class="form-group">
-                <label for="image">Cover Image:</label>
-                <input type="text" class="form-control" name="image" placeholder="Enter cover image URL"></textarea>
-            </div>
-            <div class="form-group">
-                <label for="description">Game Description:</label>
-                <textarea rows="4" class="form-control" name="description" placeholder="Enter brief game description"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-
+        <h1 style="text-align: center">New Game</h1>
+        <div style="width: 30%; margin: 25px auto;">
+            <form action="/games/create" method="post">
+                <div class="form-group">
+                    <label for="title">Game Title:</label>
+                    <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter game title">
+                </div>
+                <div class="form-group">
+                    <label for="image">Cover Image:</label>
+                    <input type="text" class="form-control" name="image" placeholder="Enter cover image URL"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="description">Game Description:</label>
+                    <textarea rows="4" class="form-control" name="description" placeholder="Enter brief game description"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            </form>
+            <a href="/games">Go Back</a>
+        </div>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
