--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="passwordConfirmation">Password confirmation:</label>
+                    <label for="passwordConfirmation">Password Confirmation:</label>
                     <input type="password" class="form-control" name="passwordConfirmation" aria-describedby="passwordHelp"
                         placeholder="Enter password confirmation">
                 </div>
